--- a/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
+++ b/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
@@ -111,5 +111,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="zombie_4105.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
