--- a/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
+++ b/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
@@ -97,6 +97,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Content Include="defaultEngine.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
