--- a/Dead Matter Server Manager/Dead Matter Server Manager/packages.config
+++ b/Dead Matter Server Manager/Dead Matter Server Manager/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Henke37.IOUtils" version="1.1.0" targetFramework="net472" />
+  <package id="Henke37.Valve.Source.ServerQuery" version="1.1.2" targetFramework="net472" />
   <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.1.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
 </packages>
