Add option to restart server on a schedule rather than number of minutes

--- a/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
+++ b/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
@@ -132,6 +132,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RestartSchedule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RestartSchedule.Designer.cs">
+      <DependentUpon>RestartSchedule.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServerManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="RestartSchedule.resx">
+      <DependentUpon>RestartSchedule.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ServerManager.resx">
       <DependentUpon>ServerManager.cs</DependentUpon>
     </EmbeddedResource>
