Further updates to player db info

--- a/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
+++ b/Dead Matter Server Manager/Dead Matter Server Manager/Dead Matter Server Manager.csproj
@@ -201,6 +201,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DM031roadmap.png" />
     <Content Include="windows-kill.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
